tooling/nargo_cli/tests/snapshots/execution_failure/ecdsa_secp256k1_invalid_pubkey/execute__tests__acir_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
Failed to solve program: 'Failed to solve blackbox function: ecdsa_secp256k1, reason: Invalid public key provided for ECDSA verification'
