tooling/nargo_cli/tests/snapshots/execution_failure/ecdsa_secp256k1_invalid_pubkey/execute__tests__brillig_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed: 'failed to solve blackbox function: ecdsa_secp256k1, reason: Invalid public key provided for ECDSA verification'
   ┌─ std/ecdsa_secp256k1.nr:25:5
   │
25 │     _verify_signature(public_key_x, public_key_y, signature, message_hash, true)
   │     ----------------------------------------------------------------------------
   │
   = Call stack:
     1. src/main.nr:3:9
     2. std/ecdsa_secp256k1.nr:25:5

Failed assertion
